Adicionado o conteúdo na homepage e CSS

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,12 @@
+@import url(homepage.css);
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap');
+
 /* Alterando o tamanho da fonte padrao para 10px */
 
 body {
     font-size: 62.5%;
+    background-color: white;
+    padding: 0px;
+    margin: 0px;
+    font-family: 'Mukta', sans-serif;
 }
