--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 @import url(homepage.css);
+@import url(map.css);
 @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap');
 
 /* Alterando o tamanho da fonte padrao para 10px */
@@ -9,5 +10,7 @@ body {
     padding: 0px;
     margin: 0px;
     font-family: 'Mukta', sans-serif;
-    height: 100vh;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
